feat: add nav, mission, products and team section for desktop

--- a/index.html
+++ b/index.html
@@ -1,11 +1,181 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Enjoy</title>
   </head>
 
   <body>
-    
+    <header>
+      <nav>
+        <a class="logo" href="#"
+          ><img
+            src="https://images.unsplash.com/photo-1551150441-3f3828204ef0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+          />
+          <h2>TechSteed</h2>
+        </a>
+        <ul>
+          <li><a href="#mission">Mission</a></li>
+          <li><a href="#products">Products</a></li>
+          <li><a href="#team">Team</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <!-- ----- Mission ----- -->
+      <section id="mission" class="mission">
+        <h2>Our Mission</h2>
+        <div class="mission-container">
+          <div class="mission__card">
+            <h3>Digital Transformation Initiative</h3>
+            <p>
+              Identifying opportunities for automation and digitization,
+              optimizing existing processes, and implementing new technology
+              solutions. We work closely with the customer's IT department and
+              stakeholders from various business units to ensure that the new
+              systems are seamlessly integrated and that employees are trained
+              to use them effectively. Our goal is to enable the customer to
+              compete more effectively in the digital age and improve its bottom
+              line.
+            </p>
+          </div>
+          <div class="mission__card">
+            <h3>Cybersecurity Risk Assessment</h3>
+            <p>
+              Identifying vulnerabilities in the agency's IT infrastructure,
+              assessing the risk associated with each vulnerability, and
+              providing recommendations for remediation. We work closely with
+              the customer's IT security team to ensure that the recommended
+              solutions are practical and aligned with the customer's security
+              policies. Our goal is to help the customer improve its security
+              posture and protect sensitive data from cyber threats.
+            </p>
+          </div>
+          <div class="mission__card">
+            <h3>Cloud Migration Strategy</h3>
+            <p>
+              Assessing existing IT infrastructure, identifying workloads that
+              can be migrated to the cloud, and selecting the most appropriate
+              cloud service provider. We work closely with the customer's IT
+              department to ensure that the migration process is seamless and
+              that the new cloud environment meets the customer's performance
+              and security requirements. Our goal is to help the customer
+              leverage the benefits of cloud technology and improve its agility
+              and scalability.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- ----- Products ----- -->
+      <section id="products" class="products">
+        <h2>Products</h2>
+        <div class="products-container">
+          <div class="products__card">
+            <h3>Marketing Solutions</h3>
+            <img
+              src="https://images.unsplash.com/photo-1607703703520-bb638e84caf2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+              alt=""
+            />
+            <div class="products__image-layer"></div>
+          </div>
+          <div class="products__card">
+            <h3>HR Management Tools</h3>
+            <img
+              src="https://images.pexels.com/photos/4344860/pexels-photo-4344860.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt=""
+            />
+            <div class="products__image-layer"></div>
+          </div>
+          <div class="products__card">
+            <h3>Collaboration Solutions</h3>
+            <img
+              src="https://images.pexels.com/photos/1181472/pexels-photo-1181472.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt=""
+            />
+            <div class="products__image-layer"></div>
+          </div>
+          <div class="products__card">
+            <h3>Interactive Chatbot Services</h3>
+            <img
+              src="https://plus.unsplash.com/premium_photo-1677094310919-d0361465d3be?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332&q=80"
+              alt=""
+            />
+            <div class="products__image-layer"></div>
+          </div>
+          <div class="products__card">
+            <h3>Advanced Data Analytics Products</h3>
+            <img
+              src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1415&q=80"
+              alt=""
+            />
+            <div class="products__image-layer"></div>
+          </div>
+          <div class="products__card">
+            <h3>Personalized Customer Experience Products</h3>
+            <img
+              src="https://images.pexels.com/photos/4050388/pexels-photo-4050388.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt=""
+            />
+            <div class="products__image-layer"></div>
+          </div>
+          <div class="products__card">
+            <h3>Industrial IoT Solutions</h3>
+            <img
+              src="https://plus.unsplash.com/premium_photo-1663100163323-bcc8b597ce4b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1521&q=80"
+              alt=""
+            />
+            <div class="products__image-layer"></div>
+          </div>
+          <div class="products__card">
+            <h3>Logistics Management Services</h3>
+            <img
+              src="https://plus.unsplash.com/premium_photo-1661911772123-568e3552b709?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1275&q=80"
+              alt=""
+            />
+            <div class="products__image-layer"></div>
+          </div>
+        </div>
+      </section>
+      <!-- ----- Team ----- -->
+      <section id="team" class="team">
+        <h2>Our Team</h2>
+        <div class="team-container">
+          <div class="team__card">
+            <img
+              src="https://images.unsplash.com/photo-1552058544-f2b08422138a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=798&q=80"
+              alt=""
+            />
+            <h3>Nathaniel Jameson</h3>
+            <h4>Chief Executive Officer</h4>
+          </div>
+          <div class="team__card">
+            <img
+              src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=776&q=80"
+              alt=""
+            />
+            <h3>Sienna Rodriguez</h3>
+            <h4>Chief Human Resources Officer</h4>
+          </div>
+          <div class="team__card">
+            <img
+              src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+              alt=""
+            />
+            <h3>Ethan Blackwood</h3>
+            <h4>Chief Technology Officer</h4>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
